--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ and open the template in the editor.
                 </p>
                 <p class="clearfix"> 
                     <a href="#" class="log-twitter">Recuperar Contraseña</a>    
-                    <input type="submit" name="submit" value="Ingresar" onclick="location.href='menuEventos.html'">
+                    <a href="menuEventos.html" class="log-twitter">Ingresar</a>
                 </p>
             </form>​​
         </section>
