--- a/menuEventos.html
+++ b/menuEventos.html
@@ -46,7 +46,7 @@ and open the template in the editor.
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="index.html">
                                 <span class="icon">
                                         <i aria-hidden="true" class="icon-blog"></i>
                                 </span>
