--- a/menuEventos.html
+++ b/menuEventos.html
@@ -74,38 +74,38 @@ and open the template in the editor.
                     </li>
                     <li class="item2"><a href="#">Nombre completo del evento <span>2</span></a>
                         <ul>
-                            <li class="subitem1"><a href="#">Nombre del archivo numero 1<span>Descargar</span></a></li>
-                            <li class="subitem2"><a href="#">Nombre del archivo numero 2<span>Descargar</span></a></li>
-                            <li><a>Registrar Participantes</a></li>
+                            <li><a>Nombre del archivo numero 1<span>Descargar</span></a></li>
+                            <li><a>Nombre del archivo numero 2<span>Descargar</span></a></li>
+                            <li><a href="#">Registrar Participantes</a></li>
 
                         </ul>
                     </li>
                     <li class="item3"><a href="#">Nombre completo del evento<span>6</span></a>
                         <ul>
-                            <li class="subitem1"><a href="#">Nombre del archivo numero 1<span>Descargar</span></a></li>
-                            <li class="subitem2"><a href="#">Nombre del archivo numero 2<span>Descargar</span></a></li>
-                            <li class="subitem3"><a href="#">Nombre del archivo numero 3<span>Descargar</span></a></li>
-                            <li class="subitem1"><a href="#">Nombre del archivo numero 4<span>Descargar</span></a></li>
-                            <li class="subitem2"><a href="#">Nombre del archivo numero 5<span>Descargar</span></a></li>
-                            <li class="subitem3"><a href="#">Nombre del archivo numero 6<span>Descargar</span></a></li>
-                            <li><a>Registrar Participantes</a></li>
+                            <li><a>Nombre del archivo numero 1<span>Descargar</span></a></li>
+                            <li><a>Nombre del archivo numero 2<span>Descargar</span></a></li>
+                            <li><a>Nombre del archivo numero 3<span>Descargar</span></a></li>
+                            <li><a>Nombre del archivo numero 4<span>Descargar</span></a></li>
+                            <li><a>Nombre del archivo numero 5<span>Descargar</span></a></li>
+                            <li><a>Nombre del archivo numero 6<span>Descargar</span></a></li>
+                            <li><a href="#">Registrar Participantes</a></li>
                         </ul>
                     </li>
                     <li class="item4"><a href="#">Nombre completo del evento<span>3</span></a>
                         <ul>
-                            <li class="subitem1"><a href="#">Nombre del archivo numero 1<span>Descargar</span></a></li>
-                            <li class="subitem2"><a href="#">Nombre del archivo numero 2<span>Descargar</span></a></li>
-                            <li class="subitem3"><a href="#">Nombre del archivo numero 3<span>Descargar</span></a></li>
-                            <li><a>Registrar Participantes</a></li>
+                            <li><a>Nombre del archivo numero 1<span>Descargar</span></a></li>
+                            <li><a>Nombre del archivo numero 2<span>Descargar</span></a></li>
+                            <li><a>Nombre del archivo numero 3<span>Descargar</span></a></li>
+                            <li><a href="#">Registrar Participantes</a></li>
                         </ul>
                     </li>
                     <li class="item5"><a href="#">Nombre completo del evento<span>4</span></a>
                         <ul>
-                            <li class="subitem1"><a href="#">Nombre del archivo numero 1<span>Descargar</span></a></li>
-                            <li class="subitem2"><a href="#">Nombre del archivo numero 2<span>Descargar</span></a></li>
-                            <li class="subitem3"><a href="#">Nombre del archivo numero 3<span>Descargar</span></a></li>
-                            <li class="subitem1"><a href="#">Nombre del archivo numero 4<span>Descargar</span></a></li>
-                            <li><a>Registrar Participantes</a></li>
+                            <li><a>Nombre del archivo numero 1<span>Descargar</span></a></li>
+                            <li><a>Nombre del archivo numero 2<span>Descargar</span></a></li>
+                            <li><a>Nombre del archivo numero 3<span>Descargar</span></a></li>
+                            <li><a>Nombre del archivo numero 4<span>Descargar</span></a></li>
+                            <li><a href="#">Registrar Participantes</a></li>
 
                         </ul>
                     </li>
