--- a/index.html
+++ b/index.html
@@ -10,23 +10,40 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="estilo/inicio.css" rel="stylesheet" type="text/css"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+        <!--script edgar-->
+            <script src="script_data/funciones/utilidades.js" type="text/javascript"></script>
+            <script src="script_data/funciones/formatos.js" type="text/javascript"></script>
+            <script src="script_data/funciones/peticiones_ajax.js" type="text/javascript"></script>
+            <script src="script_data/funciones/CrudBase.js" type="text/javascript"></script>
+            <script src="script_data/funciones/storage.js" type="text/javascript"></script>
+            <script src="script_data/prototipos/prototipos.js" type="text/javascript"></script>
+            <script src="script_data/globales.js" type="text/javascript"></script>
+            <script src="script_data/index.js" type="text/javascript"></script>
+
+
+        <!--fin script edgar-->
     </head>
     <body>
         <section class="main">
-            <form class="form-2">
+            <form class="form-2" id="formLogIn">
                 <h1><span class="log-in">Bienvenido</span> A <span class="sign-up">NOMBRE DE LA APP</span></h1>
                 <p class="float">
                     <label for="login"><i class="icon-user"></i>Usuario</label>
-                    <input type="text" name="login" placeholder="Usuario">
+                    <input type="text" name="login" placeholder="Usuario" required>
                 </p>
                 <p class="float">
                     <label for="password"><i class="icon-lock"></i>Contraseña</label>
-                    <input type="password" name="password" placeholder="Contraseña" class="showpassword">
+                    <input type="password" name="password" placeholder="Contraseña" class="showpassword" required>
                 </p>
                 <p class="clearfix"> 
-                    <a href="#" class="log-twitter">Recuperar Contraseña</a>    
-                    <a href="menuEventos.html" class="log-twitter">Ingresar</a>
+                    <!--<a href="#" class="log-twitter">Recuperar Contraseña</a>    -->
+                    <!--<a href="menuEventos.html" class="log-twitter">Ingresar</a>-->
+                    <input type="button" class="log-twitter" value="Recuperar Contraseña"/>
+                    <input id="btnLogIn" type="button" class="log-twitter" value="Ingresar"/>
                 </p>
+                    
+                
             </form>​​
         </section>
     </body>
@@ -39,7 +56,7 @@ and open the template in the editor.
                         var change = $(this).is(":checked") ? "text" : "password";
                         var rep = $("<input placeholder='Password' type='" + change + "' />")
                             .attr("id", $input.attr("id"))
-                            .attr("name", $input.attr("name"))
+                            .attr   ("name", $input.attr("name"))
                             .attr('class', $input.attr('class'))
                             .val($input.val())
                             .insertBefore($input);
