--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="estilo/inicio.css" rel="stylesheet" type="text/css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-        <!--script edgar-->
+        <!--script 
             <script src="script_data/funciones/utilidades.js" type="text/javascript"></script>
             <script src="script_data/funciones/formatos.js" type="text/javascript"></script>
             <script src="script_data/funciones/peticiones_ajax.js" type="text/javascript"></script>
@@ -22,7 +22,7 @@ and open the template in the editor.
             <script src="script_data/index.js" type="text/javascript"></script>
 
 
-        <!--fin script edgar-->
+        edgar-->
     </head>
     <body>
         <section class="main">
