--- a/participantes.html
+++ b/participantes.html
@@ -9,6 +9,19 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--script edgar-->
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+            <script src="script_data/funciones/utilidades.js" type="text/javascript"></script>
+            <script src="script_data/funciones/formatos.js" type="text/javascript"></script>
+            <script src="script_data/funciones/peticiones_ajax.js" type="text/javascript"></script>
+            <script src="script_data/funciones/CrudBase.js" type="text/javascript"></script>
+            <script src="script_data/funciones/storage.js" type="text/javascript"></script>
+            <script src="script_data/prototipos/prototipos.js" type="text/javascript"></script>
+            <script src="script_data/globales.js" type="text/javascript"></script>
+            <script src="script_data/participantes.js" type="text/javascript"></script>
+
+
+        <!--fin script edgar-->
     </head>
     <body>
         <!--Datos del evento-->
@@ -20,13 +33,13 @@ and open the template in the editor.
         
         <!--Division del Formulario de Pobladores-->
         <div>
-            <form>
+            <form id="formPobladores">
                 <h1>POBLADORES</h1>
                 <ul>
                     <li><h3>Identificación</h3></li>
                     <li>
                         <h4>Tipo de documento</h4>
-                        <select>
+                        <select name="tipo_doc">
                             <option>Cedula Ciudadania</option>
                             <option>Cedula extranjera</option>
                             <option>Passaporte</option>
@@ -34,80 +47,80 @@ and open the template in the editor.
                     </li>
                     <li>
                         <h4>Numero Documento</h4>
-                        <input type="text" placeholder="Documento">
+                        <input type="text" name="documento" placeholder="Documento">
                     </li>
                     <li>
                         <h4>Lugar de Expedidión</h4>
-                        <input type="text" placeholder="Lugar expedición">
+                        <input type="text" name="lugar_exp" placeholder="Lugar expedición">
                     </li>
                     <li>
                         <h4>Primer Apellido</h4>
-                        <input type="text" placeholder="Primer Apellido">
+                        <input type="text" name="pri_apellido" placeholder="Primer Apellido">
                     </li>
                     <li>
                         <h4>Segundo Apellido</h4>
-                        <input type="text" placeholder="Segundo Apellido">
+                        <input type="text" name="seg_apellido" placeholder="Segundo Apellido">
                     </li>
                     <li>
                         <h4>Primer Nombre</h4>
-                        <input type="text" placeholder="Primer Nombre">
+                        <input type="text" name="pri_nombre" placeholder="Primer Nombre">
                     </li>
                     <li>
                         <h4>Segundo Nombre</h4>
-                        <input type="text" placeholder="Segundo Nombre">
+                        <input type="text" name="seg_nombre" placeholder="Segundo Nombre">
                     </li>
                 </ul>
                 <ul>
                     <li><h3>Datos Personales</h3></li>
                     <li>
                         <h4>Lugar de Nacimiento</h4>
-                        <input type="text" placeholder="Ciudad">
-                        <input type="text" placeholder="Departamento">
+                        <input type="text" name="ciud_nacimiento" placeholder="Ciudad">
+                        <input type="text" name="dep_nacimiento" placeholder="Departamento">
                     </li>
                     <li>
                         <h4>Fecha de Nacimiento</h4>
-                        <input type="date">
+                        <input name="fecha_nac" type="date">
                     </li>
                     <li>
                         <h4>Genero</h4>
-                        <select>
+                        <select name="genero">
                             <option>Hombre</option>
                             <option>Mujer</option>
                         </select>
                     </li>
                     <li>
                         <h4>Capacidades Diferentes</h4>
-                        <input type="text" placeholder="Capacidades">
+                        <input type="text" name="cap_dife" placeholder="Capacidades">
                     </li>
                     <li>
                         <h4>Etnia</h4>
-                        <input type="text" placeholder="etnia">
+                        <input type="text" name="etnia" placeholder="etnia">
                     </li>
                 </ul>
                 <ul>
                     <li><h3>Ubicación</h3></li>
                     <li>
                         <h4>Zona</h4>
-                        <input type="text" placeholder="Zona">
+                        <input type="text" name="zona" placeholder="Zona">
                     </li>
                     <li>
                         <h4>Municipio</h4>
-                        <input type="text" placeholder="Municipio">
+                        <input type="text" name="municipio" placeholder="Municipio">
                     </li>
                     <li>
                         <h4>Celular</h4>
-                        <input type="number" placeholder="Celular">
+                        <input type="number" name="celular" placeholder="Celular">
                     </li>
                     <li>
                         <h4>Correo Electronico</h4>
-                        <input type="text" placeholder="E-mail">
+                        <input type="text" name="email" placeholder="E-mail">
                     </li>
                 </ul>
                 <ul>
                     <li><h3>Escolaridad</h3></li>
                     <li>
                         <h4>Nivel alcanzado</h4>
-                        <select>
+                        <select name="escolaridad">
                             <option>Primaria</option>
                             <option>Bachillerato</option>
                             <option>Tecnico</option>
@@ -117,24 +130,24 @@ and open the template in the editor.
                     </li>
                     <li>
                         <h4>Titulo obtenido</h4>
-                        <input type="text" placeholder="Nombre Titulo">
+                        <input name="titulo_obt" type="text" placeholder="Nombre Titulo">
                     </li>
                 </ul>
                 <ul>
                     <li><h3>Datos Procesos PDP</h3></li>
                     <li>
                         <h4>Organizaciòn</h4>
-                        <input type="text" placeholder="Organizaciòn">
+                        <input name="organizacion" type="text" placeholder="Organizaciòn">
                     </li>
                     <li>
                         <h4>Proceso</h4>
-                        <input type="text" placeholder="Proceso">
+                        <input name="proceso" type="text" placeholder="Proceso">
                     </li>
                 </ul>
                 <ul>
                     <li>
-                        <input type="button" value="Aceptar">
-                        <input type="button" value="Cancelar">
+                        <input id="btnRegistrarParticiapantes" type="button" value="Aceptar">
+                        <input id="btnCancelarParticiapantes" type="button" value="Cancelar">
                     </li>
                 </ul>
             </form>
@@ -143,13 +156,13 @@ and open the template in the editor.
 
         <!--Formulario Trabajadores-->
         <div>
-            <form>
+            <form id="formTrabajadores">
                 <h1>TRABAJADORES</h1>
                 <ul>
                     <li><h3>Identificación</h3></li>
                     <li>
                         <h4>Tipo de documento</h4>
-                        <select>
+                        <select name="tipo_doc">
                             <option>Cedula Ciudadania</option>
                             <option>Cedula extranjera</option>
                             <option>Passaporte</option>
@@ -157,50 +170,50 @@ and open the template in the editor.
                     </li>
                     <li>
                         <h4>Numero Documento</h4>
-                        <input type="text" placeholder="Documento">
+                        <input type="text" name="documento" placeholder="Documento">
                     </li>
                     <li>
                         <h4>Lugar de Expedidión</h4>
-                        <input type="text" placeholder="Lugar expedición">
+                        <input type="text" name="lugar_exp" placeholder="Lugar expedición">
                     </li>
                     <li>
                         <h4>Primer Apellido</h4>
-                        <input type="text" placeholder="Primer Apellido">
+                        <input type="text" name="pri_apellido" placeholder="Primer Apellido">
                     </li>
                     <li>
                         <h4>Segundo Apellido</h4>
-                        <input type="text" placeholder="Segundo Apellido">
+                        <input type="text" name="seg_apellido" placeholder="Segundo Apellido">
                     </li>
                     <li>
                         <h4>Primer Nombre</h4>
-                        <input type="text" placeholder="Primer Nombre">
+                        <input type="text" name="pri_nombre" placeholder="Primer Nombre">
                     </li>
                     <li>
                         <h4>Segundo Nombre</h4>
-                        <input type="text" placeholder="Segundo Nombre">
+                        <input type="text" name="seg_nombre" placeholder="Segundo Nombre">
                     </li>
                 </ul>
                 <ul>
                     <li><h3>Datos Personales</h3></li>
                     <li>
                         <h4>Lugar de Nacimiento</h4>
-                        <input type="text" placeholder="Ciudad">
-                        <input type="text" placeholder="Departamento">
+                        <input type="text" name="ciud_nacimiento" placeholder="Ciudad">
+                        <input type="text" name="dep_nacimiento" placeholder="Departamento">
                     </li>
                     <li>
                         <h4>Fecha de Nacimiento</h4>
-                        <input type="date">
+                        <input name="fecha_nac" type="date">
                     </li>
                     <li>
                         <h4>Genero</h4>
-                        <select>
+                        <select name="genero">
                             <option>Hombre</option>
                             <option>Mujer</option>
                         </select>
                     </li>
                     <li>
                         <h4>Tipo de Sangre</h4>
-                        <select>
+                        <select name="tipo_sangre">
                             <option>A</option>
                             <option>A</option>
                             <option>AB</option>
@@ -209,67 +222,67 @@ and open the template in the editor.
                     </li>
                     <li>
                         <h4>RH</h4>
-                        <select>
+                        <select name="rh">
                             <option>+</option>
                             <option>-</option>
                         </select>
                     </li>
                     <li>
                         <h4>Etnia</h4>
-                        <input type="text" placeholder="etnia">
+                        <input type="text" name="etnia" placeholder="etnia">
                     </li>
                 </ul>
                 <ul>
                     <li><h3>Ubicación</h3></li>
                     <li>
                         <h4>Ciudad</h4>
-                        <input type="text" placeholder="Ciudad">
+                        <input type="text" name="ciudad_resi" placeholder="Ciudad">
                     </li>
                     <li>
                         <h4>Dirección</h4>
-                        <input type="text" placeholder="Dirección">
+                        <input type="text" name="dire_vivienda" placeholder="Dirección">
                     </li>
                     <li>
                         <h4>Barrio</h4>
-                        <input type="text" placeholder="Barrio"> 
+                        <input type="text" name="barrio" placeholder="Barrio"> 
                     </li>
                     <li>
                         <h4>Telefono Fijo</h4>
-                        <input type="number" placeholder="Telefono Fijo">
+                        <input type="number" name="tel_fijo" placeholder="Telefono Fijo">
                     </li>
                     <li>
                         <h4>Celular</h4>
-                        <input type="number" placeholder="Celular">
+                        <input type="number" name="celular" placeholder="Celular">
                     </li>
                     <li>
                         <h4>Correo Electronico</h4>
-                        <input type="text" placeholder="E-mail">
+                        <input type="text" name="email" placeholder="E-mail">
                     </li>
                 </ul>
                 <ul>
                     <li><h3>Datos de sguridad social en salud</h3></li>
                     <li>
                         <h4>Regimen</h4>
-                        <select>
+                        <select name="regimen">
                             <option>Contributivo</option>
                             <option>Subsidiado</option>
                         </select>
                     </li>
                     <li>
                         <h4>EPS/ARS</h4>
-                        <input type="text" placeholder="Nombre EPS/ARS">
+                        <input type="text" name="eps_arl" placeholder="Nombre EPS/ARS">
                     </li>
                     <li>
                         <h4>IPS</h4>
-                        <input type="text" placeholder="Nombre IPS">
+                        <input type="text" name="ips" placeholder="Nombre IPS">
                     </li>
                     <li>
                         <h4>Nivel de SISBEN</h4>
-                        <input type="number" placeholder="0">
+                        <input type="number" name="sisben" placeholder="0">
                     </li>
                     <li>
                         <h4>Puntaje</h4>
-                        <input type="number" placeholder="0">
+                        <input type="number" name="puntaje" placeholder="0">
                     </li>
                 </ul>
                 <h2>Nivel de Estudios</h2>
@@ -320,8 +333,8 @@ and open the template in the editor.
 
                 <ul>
                     <li>
-                        <input type="button" value="Aceptar">
-                        <input type="button" value="Cancelar">
+                        <input id="btnRegistrarTrabajadores" type="button" value="Aceptar">
+                        <input id="btnCancelarTrabajadores" type="button" value="Cancelar">
                     </li>
                 </ul>
 
