--- a/participantes.html
+++ b/participantes.html
@@ -34,6 +34,7 @@ and open the template in the editor.
             <h1>Nombre del Evento</h1>
             <input type="button" value="Registrar Poblador" id="btn_RegitrarP">
             <input type="button" value="Registrar Trabajador" id="btn_RegitrarT">
+            <input type="button" value="volver al menu">
         </div>
         
         <!--Division del Formulario de Pobladores-->
