--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@ and open the template in the editor.
             <script src="script_data/prototipos/prototipos.js" type="text/javascript"></script>
             <script src="script_data/globales.js" type="text/javascript"></script>
             <script src="script_data/index.js" type="text/javascript"></script>
+            <script src="script_data/appsw.js" type="text/javascript"></script>
+            <script src="script_data/offline.js" type="text/javascript"></script>
 
 
         <!--fin script edgar-->
