--- a/menuEventos.html
+++ b/menuEventos.html
@@ -24,6 +24,7 @@ and open the template in the editor.
             <script src="script_data/prototipos/prototipos.js" type="text/javascript"></script>
             <script src="script_data/globales.js" type="text/javascript"></script>
             <script src="script_data/menu_eventos.js" type="text/javascript"></script>
+            <script src="script_data/appsw.js" type="text/javascript"></script>
         <!--fin script edgar-->
 
         
