--- a/participantes.html
+++ b/participantes.html
@@ -25,7 +25,7 @@ and open the template in the editor.
             <script src="script_data/globales.js" type="text/javascript"></script>
             <script src="script_data/participantes.js" type="text/javascript"></script>
             <script src="script_data/actualizar_registro_participantes.js" type="text/javascript"></script>
-            <script src="script_data/offline.js" type="text/javascript"></script>
+            <!--<script src="script_data/offline.js" type="text/javascript"></script>-->
             <script src="Js/inicio.js" type="text/javascript"></script>
         <!--fin script edgar-->
     </head>
@@ -38,7 +38,7 @@ and open the template in the editor.
 
             <h3>Participantes</h3>
         </div>
-        <div>
+        <div id="tblParticipantes">
             <table>
                 <tr>
                   <th class="mdl-data-table__cell--non-numeric">Primer Nombre</th>
