--- a/index.html
+++ b/index.html
@@ -22,21 +22,24 @@ and open the template in the editor.
             <script src="script_data/index.js" type="text/javascript"></script>
             <script src="script_data/appsw.js" type="text/javascript"></script>
             <script src="script_data/offline.js" type="text/javascript"></script>
-
+            
+            <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+            <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+            <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
         <!--fin script edgar-->
     </head>
     <body>
         <section class="main">
             <form class="form-2" id="formLogIn">
-                <h1><span class="log-in">Bienvenido</span> A <span class="sign-up">NOMBRE DE LA APP</span></h1>
+                <h1><span class="log-in">Bienvenido</span> </h1>
                 <p class="float">
                     <label for="login"><i class="icon-user"></i>Usuario</label>
                     <input type="text" name="login" placeholder="Usuario" required>
                 </p>
                 <p class="float">
                     <label for="password"><i class="icon-lock"></i>Contraseña</label>
-                    <input type="password" name="password" placeholder="Contraseña" class="showpassword" required>
+                    <input type="password" name="password" placeholder="Contraseña" required>
                 </p>
                 <p class="clearfix"> 
                     <!--<a href="#" class="log-twitter">Recuperar Contraseña</a>    -->
