--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ and open the template in the editor.
         <!--fin script edgar-->
     </head>
     <body>
+        <img src="image/logo.png">
         <section class="main">
             <form class="form-2" id="formLogIn">
                 <h1><span class="log-in">Bienvenido</span> </h1>
