--- a/menuEventos.html
+++ b/menuEventos.html
@@ -36,6 +36,7 @@ and open the template in the editor.
     </head>
     <body>
         
+        <img src="image/logo.png">
         <!--Division del menu-->
         <div id="menuAdmin">
             <ul>
@@ -50,6 +51,9 @@ and open the template in the editor.
                 </li>
                 <li id="btnReportes">
                     <h4>Reportes</h4>
+                </li>
+                <li>
+                    <a href="index.html"><h4>Salir</h4></a>
                 </li>
             </ul>
         </div>
