--- a/participantes.html
+++ b/participantes.html
@@ -57,7 +57,7 @@ and open the template in the editor.
             
             <form id="formPobladores">
                 <ul class="identificacion">                    
-                    <li><h4>Identificación</h3></li>
+                    <li><h4><b>Identificación</b></h4></li>
                     <li>
                         <h5>Tipo de documento</h5>
                         <select name="tipo_doc" required>
@@ -92,7 +92,7 @@ and open the template in the editor.
                     </li>
                 </ul>
                 <ul class="datosPersonales">
-                    <li><h4>Datos Personales</h4></li>
+                    <li><h4><b>Datos Personales</b></h4></li>
 
                     <li>
                         <h6>Departamento</h6>
@@ -128,7 +128,7 @@ and open the template in the editor.
                     </li>
                 </ul>
                 <ul class="ubicacion">
-                    <li><h4>Ubicación</h4></li>
+                    <li><h4><b>Ubicación</b></h4></li>
                     <li>
                         <h5>Zona</h5>
                         <input type="text" name="zona" placeholder="Zona" class="mdl-textfield__input" required>
@@ -147,7 +147,7 @@ and open the template in the editor.
                     </li>
                 </ul>
                 <ul class="escolaridad">
-                    <li><h4>Escolaridad</h4></li>
+                    <li><h4><b>Escolaridad</b></h4></li>
                     <li>
                         <h5>Nivel alcanzado</h5>
                         <select name="escolaridad" required>
@@ -164,7 +164,7 @@ and open the template in the editor.
                     </li>
                 </ul>
                 <ul class="datosP">
-                    <li><h4>Datos Procesos PDP</h4></li>
+                    <li><h4><b>Datos Procesos PDP</b></h4></li>
                     <li>
                         <h5>Organizaciòn</h5>
                         <input name="organizacion" type="text" placeholder="Organizaciòn" class="mdl-textfield__input" required>
