--- a/menuEventos.html
+++ b/menuEventos.html
@@ -152,9 +152,9 @@ and open the template in the editor.
         
         <div class="menuAdmin" id="menuRepor">
             <ul>
-                <li><h4>Reporte por Edad</h4></li>
-                <li><h4>Reporte por Genero</h4></li>
-                <li><h4>Reporte por Evento</h4></li>
+                <li><h4><a href="edades.html">Reporte por Edad</a></h4></li>
+                <li><h4><a href="genero.html">Reporte por Genero</a></h4></li>
+                <li><h4><a href="general.html">Reporte por Evento</a></h4></li>
                 <li id="btnVolverMenu"><h4>Vover al menu</h4></li>
             </ul>
         </div>
