Se agregran funcionalidades para instalar bd localmente y para el manejo de eventos

--- a/participantes.html
+++ b/participantes.html
@@ -68,7 +68,7 @@ and open the template in the editor.
                     </li>
                     <li>
                         <h5>Numero Documento</h5>
-                        <input type="text" name="documento" placeholder="Documento" class="mdl-textfield__input" required>
+                        <input id="txt_cc" type="number" name="documento" placeholder="Documento" class="mdl-textfield__input" required>
                     </li>
                     <li>
                         <h5>Lugar de Expedidión</h5>
