--- a/menuEventos.html
+++ b/menuEventos.html
@@ -24,6 +24,7 @@ and open the template in the editor.
             <script src="script_data/prototipos/prototipos.js" type="text/javascript"></script>
             <script src="script_data/globales.js" type="text/javascript"></script>
             <script src="script_data/menu_eventos.js" type="text/javascript"></script>
+            <script src="script_data/instalar.js" type="text/javascript"></script>
             <script src="script_data/preparar.js" type="text/javascript"></script>
             <script src="script_data/sync.js" type="text/javascript"></script>
             <script src="script_data/offline.js" type="text/javascript"></script>
@@ -130,12 +131,12 @@ and open the template in the editor.
             <h3>Instalando</h3>
             <p>Se esta realizando el proceso de instalación, por favor no cierre el navegador.</p>
             <ul>
-                <li><h5>Primer paso</h5></li>
+                <!--<li><h5>Primer paso</h5></li>
                 <li><h5>Segundo paso</h5></li>
                 <li><h5>Tercer paso</h5></li>
                 <li><h5>Cuarto paso</h5></li>
                 <li><h5>Quinto paso</h5></li>
-                <li><h5>Sexto paso</h5></li>
+                <li><h5>Sexto paso</h5></li>-->
                 <li>
                     <input type="button" value="Aceptar" id="btnAceptaIns">
                 </li>
