se agrega fucionalidad para registro de particpante sin evento

--- a/menuEventos.html
+++ b/menuEventos.html
@@ -54,7 +54,10 @@ and open the template in the editor.
                 </li>
                 <li id="btnEventos">
                     <h4>Eventos</h4>
-                </li>                
+                </li>    
+                <li id="btnRegistroUsuario">
+                    <h4>Registrar Usuario</h4>
+                </li>            
                 <li id="btnSincronizar">
                     <h4>Sincronizar</h4>
                 </li>
