--- a/genero.html
+++ b/genero.html
@@ -26,7 +26,7 @@
     </script>
   </head>
   <body>
-      <a href="menuEventos.html">Generar Reporte"</a>
+      <a href="menuEventos.html">Volver al menu"</a>
     <div id="barchart_material" style="width: 1200px; height: 500px; margin-left: 50px"></div>
   </body>
 </html>
