Cambios de Edgar
Cambios realizados por Edgar el dia de la entrega

--- a/menuEventos.html
+++ b/menuEventos.html
@@ -38,7 +38,7 @@ and open the template in the editor.
 
     </head>
     <body>
-        
+        <div id="divLoad" class="mdl-spinner mdl-js-spinner is-active" style="display: none"></div>
         <img src="image/logo.png">
         <!--Division del menu-->
         <div id="menuAdmin" class="menuAdmin">
